--- a/public/about.html
+++ b/public/about.html
@@ -95,6 +95,13 @@
                                     </a>
                                 </li>
                             </ul>
+                            <br/>
+                            <a class="btn" href="https://drive.google.com/open?id=1riGAOIb6S1A2PfrQ95LbL2mVdibs38IK">
+                                <span class="btn__text">CV Español</span>
+                            </a>
+                            <a class="btn" href="https://drive.google.com/open?id=1I4Y-wV1DfHwd0LrVcdwvGY6ecvlgv0Nm">
+                                <span class="btn__text">CV Inglés</span>
+                            </a>
                             <div class="heading-block"></div>
                             <a href="#" class="block">
                                 <div class="feature feature--featured boxed boxed--border bg--secondary">
