--- a/public/about.html
+++ b/public/about.html
@@ -24,7 +24,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-3 col-sm-2">
-                            <a class="item-text-dark" href="index.html">
+                            <a href="index.html">
                                 <div class="logo-name-dark"> Malexcob </div>
                             </a>
                         </div>
@@ -40,7 +40,7 @@
             </div>
             <!--end bar-->
             <nav id="menu2" class="bar bar-2 hidden-xs bar--transparent bar--absolute" data-scroll-class='90vh:pos-fixed'>
-                <div class="container">
+                <div class="container hidden-xs hidden-sm">
                     <div class="row">
                         <div class="col-sm-3">
                             <div class="bar__module">
@@ -54,10 +54,32 @@
                             <div class="bar__module">
                                 <ul class="menu text-right">
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="index.html#projects">Mi trabajo</a>
+                                        <a class="item-text-dark" href="#projects">Mi trabajo</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="index.html#contact">Contacto</a>
+                                        <a class="item-text-dark" href="#contact">Contacto</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--end module-->
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+                <div class="container visible-xs visible-sm">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <div class="bar__module">
+                                <ul class="menu text-right">
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="#projects">Mi trabajo</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="about.html">Sobre mí</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="#contact">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
