--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
             </div>
             <!--end bar-->
             <nav id="menu2" class="bar bar-2 hidden-xs bar--transparent bar--absolute" data-scroll-class='90vh:pos-fixed'>
-                <div class="container">
+                <div class="container hidden-xs hidden-sm">
                     <div class="row">
                         <div class="col-sm-3">
                             <div class="bar__module">
@@ -61,6 +61,28 @@
                                     </li>
                                     <li class="menu-item">
                                         <a class="item-text" href="#contact">Contacto</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <!--end module-->
+                        </div>
+                    </div>
+                    <!--end of row-->
+                </div>
+                <!--end of container-->
+                <div class="container visible-xs visible-sm">
+                    <div class="row">
+                        <div class="col-sm-9">
+                            <div class="bar__module">
+                                <ul class="menu text-right">
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="#projects">Mi trabajo</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="about.html">Sobre mí</a>
+                                    </li>
+                                    <li class="menu-item">
+                                        <a class="item-text-dark" href="#contact">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
