--- a/public/about.html
+++ b/public/about.html
@@ -54,10 +54,10 @@
                             <div class="bar__module">
                                 <ul class="menu text-right">
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="#projects">Mi trabajo</a>
+                                        <a class="item-text-dark" href="index.html#projects">Mi trabajo</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="#contact">Contacto</a>
+                                        <a class="item-text-dark" href="index.html#contact">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
@@ -73,13 +73,10 @@
                             <div class="bar__module">
                                 <ul class="menu text-right">
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="#projects">Mi trabajo</a>
+                                        <a class="item-text-dark" href="index.html#projects">Mi trabajo</a>
                                     </li>
                                     <li class="menu-item">
-                                        <a class="item-text-dark" href="about.html">Sobre mí</a>
-                                    </li>
-                                    <li class="menu-item">
-                                        <a class="item-text-dark" href="#contact">Contacto</a>
+                                        <a class="item-text-dark" href="index.html#contact">Contacto</a>
                                     </li>
                                 </ul>
                             </div>
