--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,7 @@
                                 <h1 alt="Image" class="ident-text">Redactora Digital</h1>
                             </div>
                             <h3 class="subtitle">
-                                Mi nombre es Alexandra Barrero y soy profesional en lingüística. Me he desempeñado como tutora, correctora de estilo y redactora. Mi experiencia más reciente es como editora de contenido digital en el mundo del E-commerce. 
+                                Mi nombre es Alexandra Barrero y soy profesional en lingüística. Me he desempeñado como tutora, correctora de estilo y redactora. Mi experiencia más reciente es como editora de contenido digital en el mundo del e-commerce. 
                             </h3>
                             <a class="btn btn--primary type--uppercase" href="https://malexcob.wordpress.com/">
                                 <span class="btn__text">
