--- a/public/about.html
+++ b/public/about.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8">
         <title>Portafolio Malexcob</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Site Description Here">
+        <meta name="description" content="Mi nombre es Alexandra Barrero y soy profesional en lingüística. Me he desempeñado como tutora, correctora de estilo y redactora."/>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
@@ -100,7 +100,13 @@
                     <div class="row">
                         <div class="col-md-5 col-sm-7">
                             <h1><strong>Mayra Alexandra</strong></h1>
-                            <p class="lead description">Soy oriunda del Líbano, Tolima y lingüista graduada de la Universidad Nacional de Colombia. Desde el 2016 hasta mediados de 2018 trabajé como <strong>tutora</strong> en procesos de fortalecimiento de lectura y escritura académica en el ámbito universitario. Durante el 2017 me desempeñé como <strong>codificadora</strong> de SaberPro y, finalizando el año, fui colaboradora de la revista Saberes y Signos, más precisamente como <strong>correctora de estilo</strong>. <br/> <br/>Mi más reciente trabajo se da a partir de julio de 2018 como <strong>editora</strong> de contenido digital en el mundo del e-commerce. Me interesa continuar aprendiendo sobre temas de marketing digital y educativos. Me apasiona la historia antigua, pero sobre todo ¡la danza!
+                            <p class="lead description">Soy oriunda del Líbano, Tolima y lingüista graduada de la Universidad Nacional
+                                de Colombia. Durante el 2017 me desempeñé como <strong>codificadora</strong> del examen SaberPro y, finalizando el año, fui colaboradora de la revista 
+                                Saberes y Signos, más precisamente como <strong>correctora de estilo</strong>. Desde el 2016 hasta mediados de 2018 trabajé como <strong>tutora</strong> en procesos de 
+                                fortalecimiento de lectura y escritura académica en el ámbito universitario. <br/> <br/>Mi más 
+                                reciente trabajo se da a partir de julio de 2018 como <strong>editora</strong> de contenido digital 
+                                en el mundo del e-commerce. Me interesa continuar aprendiendo sobre temas de marketing digital y 
+                                educativos. Me apasiona la historia antigua, pero sobre todo ¡la danza!
                             </p>
                             <ul class="social-list list-inline list--hover">
                                 <li data-tooltip="@malexcob">
