--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
     <head>
         <meta charset="utf-8">
-        <title>Portafolio Malexcob</title>
+        <title>Portafolio  Malexcob</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="Site Description Here">
+        <meta name="description" content="Mi nombre es Alexandra Barrero y soy profesional en lingüística. Me he desempeñado como tutora, correctora de estilo y redactora."/>
         <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/stack-interface.css" rel="stylesheet" type="text/css" media="all" />
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all" />
