--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
 <html lang="es">
   <head>
     <meta charset="utf-8">
-    <title>Portafolio Malexcob</title>
+    <title>Portafolio Malexcob 404</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Mi nombre es Alexandra Barrero y soy profesional en lingüística. Me he desempeñado como tutora, correctora de estilo y redactora."/>
     <link href="css/404.css" rel="stylesheet" type="text/css" media="all" />
