Generate new version with SEO guidelines

--- a/public/about.html
+++ b/public/about.html
@@ -100,12 +100,12 @@
                     <div class="row">
                         <div class="col-md-5 col-sm-7">
                             <h1><strong>Mayra Alexandra</strong></h1>
-                            <p class="lead description">Soy oriunda del Líbano, Tolima y lingüista graduada de la Universidad Nacional
+                            <p class="lead description">Soy oriunda del Líbano-Tolima y lingüista graduada de la Universidad Nacional
                                 de Colombia. Durante el 2017 me desempeñé como <strong>codificadora</strong> del examen SaberPro y, finalizando el año, fui colaboradora de la revista 
                                 Saberes y Signos, más precisamente como <strong>correctora de estilo</strong>. Desde el 2016 hasta mediados de 2018 trabajé como <strong>tutora</strong> en procesos de 
                                 fortalecimiento de lectura y escritura académica en el ámbito universitario. <br/> <br/>Mi más 
                                 reciente trabajo se da a partir de julio de 2018 como <strong>editora</strong> de contenido digital 
-                                en el mundo del e-commerce. Me interesa continuar aprendiendo sobre temas de marketing digital y 
+                                en el mundo del e-commerce. Me interesa continuar aprendiendo sobre marketing digital y colaborar en proyectos editoriales o 
                                 educativos. Me apasiona la historia antigua, pero sobre todo ¡la danza!
                             </p>
                             <ul class="social-list list-inline list--hover">
