--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
                 <div class="container pos-vertical-center">
                     <div class="row">
                         <div class="col-sm-8">
-                            <div class="ident-container">
+                            <div class="logo-name-container">
                                 <h1 alt="Image" class="ident-text">Redactora Digital</h1>
                             </div>
                             <h3 class="subtitle">
